# styx

./: Cargo.toml  LICENSE
src/: config.rs  ir.rs  lean_parser.rs  lib.rs  main.rs  reachability.rs  rust_parser.rs  type_rewrite.rs
src/emit/: direct.rs  indent.rs  lean_to_rust.rs  mod.rs
src/emit/styxir/: analysis.rs  body.rs  closures.rs  config.rs  desugar.rs  expr.rs  external.rs  fun_emit.rs  lookup.rs  mod.rs  paths.rs  tests.rs  type_fmt.rs  types_emit.rs
src/passes/: desugar_mut_self.rs  desugar_returns.rs  mod.rs
styx-rustc/: Cargo.toml  rust-toolchain.toml
styx-rustc/src/: extract_funs.rs  extract_traits.rs  extract_types.rs  main.rs  ty_convert.rs
tests/: direct_mode.rs  ir_type_args.rs  lean_to_rust.rs  naming_keywords.rs  parse_fns.rs
tests/golden/fixtures/: fixture.rs
