[package]
name = "styx"
version = "0.1.0"
edition = "2024"
description = "StyxIR-to-Lean4 translator (styx-rustc StyxIR -> Aeneas-compatible Lean 4)"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "styx"
path = "src/main.rs"
